[package]
name = "cibushub"
description = "CLI recipes, meal/grocery planning, and pantry tracker"
version = "0.0.1"
authors = ["Daniel Way <contact@danieldway.com>"]
license = "MIT"
repository = "https://github.com/danielway/cibushub"
exclude = [".github"]
edition = "2021"

[dependencies]
tty-interface = "4"
tty-form = "2"
tty-text = "2"
crossterm = "0.26"
